--- a/admin/app/components/partials/header/header.html
+++ b/admin/app/components/partials/header/header.html
@@ -52,7 +52,7 @@
       </div>
     </li> -->
     <li ng-if="fSessionCI.key_grupo == 'key_cliente'" ><div style="color: #c6efff; padding-top: 10px;">Seleccionadas: {{seleccionadas}}</div></li>
-    <li ng-if="fSessionCI.monedero"><div style="color: #c6efff; padding-top: 10px;">{{ 'Text.MONEDERO' | translate }}: {{fSessionCI.monedero}} $</div></li>
+    <li ng-if="fSessionCI.monedero"><div style="color: #c6efff; padding-top: 10px;">{{ 'Text.MONEDERO' | translate }}: {{saldo}} $</div></li>
     <li ng-if="fSessionCI.key_grupo == 'key_cliente'">
       <div uib-dropdown>
         <button id="language" type="button" class="btn no-bg" uib-dropdown-toggle>
