--- a/templates/seccion/inicio.html
+++ b/templates/seccion/inicio.html
@@ -37,7 +37,7 @@
 								<div class="service-box-content">
 									<h6><a href="#ficha{{::item.idficha}}" fancybox >{{::item.titulo}}</a></h6>
 
-									<p>{{::item.descripcion}}</p>
+									<p>{{::item.descripcion_corta}}</p>
 									<div id="ficha{{::item.idficha}}" style="display:none;width:100%;" ng-include="'templates/popups/modal.php'"></div>
 								</div><!-- service-box-content -->
 							</div><!-- service-box -->
