--- a/templates/seccion/servicios.html
+++ b/templates/seccion/servicios.html
@@ -73,7 +73,7 @@
 							<i class="{{item.clase}}"></i>
 							<h6 style="color: #FFF"><a href="#ficha{{::item.idficha}}" fancybox >{{::item.titulo}}</a></h6>
 							<div class="service-box-content">
-								{{item.descripcion}}
+								{{item.descripcion_corta}}
 							</div><!-- service-box-content -->
 							<div id="ficha{{::item.idficha}}" style="display:none;width:100%;" ng-include="'templates/popups/modal.php'"></div>
 						</div><!-- service-box -->
