--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -53,11 +53,14 @@
  *	+ TYPOGRAPHY
  ***********************************************************************************/
 @font-face {
-    font-family: "PingFang";
-    src: url(../../assets/fonts/PingFang.ttc.ttf) format("truetype");
+    font-family: "PingFang SC";
+    src: url(../../assets/fonts/PingFang-SC-Regular.ttf) format("truetype");
 }
 	body {
-		font: 14px/27px "Open Sans", sans-serif;
+		/*font: 14px/27px "Open Sans", sans-serif;*/
+		font-size: 14px;
+		line-height: 27px;
+		font-family: "Open Sans", sans-serif;
 		background-color: #fff;
 		color: #8f8f8f;
 	}
@@ -68,7 +71,7 @@
 	h4,
 	h5,
 	h6 {
-		font-family: "PingFang";
+		font-family: "PingFang SC";
 		margin: 0;
 		color: #464646;
 		font-weight: 300;
@@ -290,7 +293,7 @@
 
 	/* TRANFORMATION CLASSES */
 	.lead {
-		font: 24px/36px "PingFang", sans-serif;
+		font: 24px/36px "PingFang SC", sans-serif;
 	}
 
 	.text-italic {
@@ -480,7 +483,7 @@
 
 	.headline p {
 		margin-bottom: 0;
-		font: 13px/24px "PingFang", sans-serif;
+		font: 13px/24px "PingFang SC", sans-serif;
 	}
 
 	.title {
@@ -509,7 +512,7 @@
 		border: none;
 		border-radius: 0;
 		color: #fff;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		text-align: center;
 	}
 
@@ -568,7 +571,7 @@
 	.plus-list li:before {
 		margin-right: 10px;
 		color: #1574a6;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		font-weight: 700;
 		content: "+";
 	}
@@ -670,7 +673,7 @@
 		border-radius: 20px;
 		margin-bottom: 20px;
 		margin-right: 15px;
-		font: 13px/24px "PingFang", sans-serif;
+		font: 13px/24px "PingFang SC", sans-serif;
 		letter-spacing: 0.3px;
 		text-transform: uppercase;
 		-webkit-transition: all 0.25s;
@@ -678,7 +681,7 @@
 	}
 	.btn-mini{
 		padding: 8px 10px;
-		font: 0.7em/1.1em "PingFang", sans-serif;
+		font: 0.7em/1.1em "PingFang SC", sans-serif;
 	}
 	.btn:last-child {
 		margin-right: 0;
@@ -988,7 +991,7 @@
 
 	.image-box-2 .image-box-details h6 {
 		margin-bottom: 15px;
-		font: 16px "PingFang", sans-serif;
+		font: 16px "PingFang SC", sans-serif;
 		text-transform: uppercase;
 	}
 
@@ -1063,7 +1066,7 @@
 		margin-bottom: 0;
 		color: #1574a6;
 		opacity: 0;
-		font: 12px/16px "PingFang", sans-serif;
+		font: 12px/16px "PingFang SC", sans-serif;
 		text-transform: uppercase;
 		-webkit-transition: all 0.25s;
 				transition: all 0.25s;
@@ -1098,7 +1101,7 @@
 		position: absolute;
 		bottom: 20px;
 		left: 20px;
-		font: 30px/48px "PingFang", sans-serif;
+		font: 30px/48px "PingFang SC", sans-serif;
 	}
 
 	.image-box-3 h4 a {
@@ -1392,7 +1395,7 @@
 		margin-bottom: 15px;
 		background-color: #1574a6;
 		color: #fff;
-		font: 14px/27px "PingFang", sans-serif;
+		font: 14px/27px "PingFang SC", sans-serif;
 		white-space: nowrap;
 	    text-overflow: ellipsis;
 		-webkit-transform: translateZ(0);
@@ -1636,7 +1639,7 @@
 	.discount small {
 		display: block;
 		color: #fff;
-		font: 400 14px/36px "PingFang", sans-serif;
+		font: 400 14px/36px "PingFang SC", sans-serif;
 	}
 
 
@@ -2855,7 +2858,7 @@
 	.progress-bar-title {
 		margin-bottom: 15px;
 		color: #464646;
-		font: 700 30px "PingFang", sans-serif;
+		font: 700 30px "PingFang SC", sans-serif;
 	}
 
 	.progress-bar-title small {
@@ -2873,7 +2876,7 @@
 		top: -38px;
 		right: 0;
 		color: #464646;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 	}
 
 /***********************************************************************************
@@ -2936,7 +2939,7 @@
 	.comparison-bars .progress-bar-title-before h4 {
 		display: inline-block;
 		margin-bottom: 0;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 	}
 
 	.comparison-bars .progress-bar-title-after h4 small,
@@ -3284,7 +3287,7 @@
 	.process-steps .step i + h5,
 	.process-steps .step img + h5 {
 		margin-top: -50px;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		line-height: 26px;
 		-webkit-transition: all 0.25s;
 				transition: all 0.25s;
@@ -3445,7 +3448,7 @@
 	.horizontal-timeline .item h6 {
 		margin-bottom: 20px;
 		color: #1574a6;
-		font: 14px/27px "PingFang", sans-serif;
+		font: 14px/27px "PingFang SC", sans-serif;
 	}
 
 	.horizontal-timeline .owl-prev,
@@ -3512,7 +3515,7 @@
 		position: relative;
 		margin-bottom: 30px;
 		color: #1574a6;
-		font: 16px "PingFang", sans-serif;
+		font: 16px "PingFang SC", sans-serif;
 	}
 
 	.vertical-timeline .period-details h6:before {
@@ -3834,7 +3837,7 @@
 		display: inline-block;
 		border-bottom: 1px solid #1574a6;
 		margin: 0 auto 100px;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		font-weight: 700;
 		text-transform: uppercase;
 	}
@@ -3851,7 +3854,7 @@
 	}
 
 	.testimonial h5 {
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		text-transform: uppercase;
 	}
 
@@ -3982,7 +3985,7 @@
 	.filter li a {
 		display: inline-block;
 		color: #8f8f8f;
-		font: 14px/27px "PingFang", sans-serif;
+		font: 14px/27px "PingFang SC", sans-serif;
 		text-decoration: none;
 		-webkit-transition: all 0.25s;
 				transition: all 0.25s;
@@ -4033,7 +4036,7 @@
 		border: none;
 		background-color: transparent;
 		color: #464646;
-		font: 16px "PingFang", sans-serif;
+		font: 16px "PingFang SC", sans-serif;
 		text-align: center;
 		-webkit-transition: all 0.25s;
 				transition: all 0.25s;
@@ -4857,7 +4860,7 @@
 	#section-36 .contact span {
 		margin-right: 20px;
 		color: #464646;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		text-transform: uppercase;
 	}
 
@@ -4960,7 +4963,7 @@
 		left: 75%;
 		padding-left: 35px;
 		color: #fff;
-		font-family: "PingFang";
+		font-family: "PingFang SC";
 		letter-spacing: 35px;
 		text-align: center;
 		text-transform: uppercase;
@@ -5179,7 +5182,7 @@
 		top: 50%;
 		left: 0;
 		width: 100%;
-		font: 700 72px/72px "PingFang", sans-serif;
+		font: 700 72px/72px "PingFang SC", sans-serif;
 		letter-spacing: 50px;
 		text-transform: uppercase;
 		text-align: center;
@@ -5699,7 +5702,7 @@
 
 	.tp-caption.title-white-bold {
 		color: #fff;
-		font: 700 72px/72px "PingFang", sans-serif;
+		font: 700 72px/72px "PingFang SC", sans-serif;
 	}
 
 	.tp-caption.title-white-light {
@@ -5712,7 +5715,7 @@
 	}
 
 	.tp-caption.title-big {
-		font: 700 92px/92px "PingFang", sans-serif;
+		font: 700 92px/92px "PingFang SC", sans-serif;
 	}
 
 	.tp-caption.title-big-white {
@@ -5735,14 +5738,14 @@
 
 	.tp-caption.subtitle-white {
 		color: #fff;
-		font: 30px/48px "PingFang", sans-serif;
+		font: 30px/48px "PingFang SC", sans-serif;
 		letter-spacing: 15px;
 		text-transform: uppercase;
 	}
 
 	.tp-caption.subtitle-big {
 		color: #fff;
-		font: 36px/48px "PingFang", sans-serif;
+		font: 36px/48px "PingFang SC", sans-serif;
 		letter-spacing: 140px;
 		text-transform: uppercase;
 	}
@@ -5778,7 +5781,7 @@
 
 	.tp-caption.icons {
 		color: #1574a6;
-		font: 14px/27px "PingFang", sans-serif;
+		font: 14px/27px "PingFang SC", sans-serif;
 		letter-spacing: 5px;
 		text-align: center;
 		text-transform: uppercase;
@@ -6080,7 +6083,7 @@
 
 	.widget-title {
 		margin-bottom: 30px;
-		font: 400 13px/18px "PingFang", sans-serif;
+		font: 400 13px/18px "PingFang SC", sans-serif;
 		letter-spacing: 2px;
 		text-transform: uppercase;
 	}
@@ -6166,7 +6169,7 @@
 
 	.widget-categories ul li a strong {
 		color: #464646;
-		font-family: "PingFang", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		font-weight: 400;
 		-webkit-transition: all 0.25s;
 				transition: all 0.25s;
@@ -6348,7 +6351,7 @@
 
 	.widget-recent-posts ul li .post-title {
 		color: #464646;
-		font: 13px "PingFang", sans-serif;
+		font: 13px "PingFang SC", sans-serif;
 		-webkit-transition: all 0.25s;
 				transition: all 0.25s;
 	}
@@ -6422,7 +6425,7 @@
 		margin-bottom: 5px;
 		margin-left: 80px;
 		color: #8f8f8f;
-		font: 10px "PingFang", sans-serif;
+		font: 10px "PingFang SC", sans-serif;
 		letter-spacing: 2px;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -6452,7 +6455,7 @@
 		padding-right: 10px;
 		border-right: 1px solid #e1e1e1;
 		color: #1574a6;
-		font: 36px/20px "PingFang", sans-serif;
+		font: 36px/20px "PingFang SC", sans-serif;
 		text-align: center;
 		text-transform: uppercase;
 		text-decoration: none;
@@ -7274,7 +7277,7 @@ body{top:0px!important;}
 .traductor{
 	visibility: hidden;
 	position: absolute;
-	z-index: 8001;
+	z-index: 8021;
 	right: 20%;top: 12px;}
 @media (max-width:767px){
 	.traductor{right: initial;margin-left: 10px}
