videos en fichas

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -60,7 +60,7 @@
 		/*font: 14px/27px "Open Sans", sans-serif;*/
 		font-size: 14px;
 		line-height: 27px;
-		font-family: "Open Sans", sans-serif;
+		font-family: "PingFang SC", sans-serif;
 		background-color: #fff;
 		color: #8f8f8f;
 	}
