--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7283,3 +7283,11 @@ body{top:0px!important;}
 	.traductor{right: initial;margin-left: 10px}
 
 }
+.video_icono{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 36px;
+	margin-left: -18px;
+	margin-top: -10px;
+}
