--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7289,5 +7289,8 @@ body{top:0px!important;}
 	left: 50%;
 	font-size: 36px;
 	margin-left: -18px;
-	margin-top: -10px;
+	margin-top: -18px;
+}
+.tacos_azules img{
+	max-height: 100%;
 }
