--- a/admin/app/components/partials/header/header.html
+++ b/admin/app/components/partials/header/header.html
@@ -51,6 +51,10 @@
         </div>
       </div>
     </li> -->
+    <li>
+      <div class="mr" id="google_translate_element" class="no_print traductor"></div>
+
+    </li>
     <li ng-if="fSessionCI.key_grupo == 'key_cliente'" ><div style="color: #c6efff; padding-top: 10px;">Seleccionadas: {{seleccionadas}}</div></li>
     <li ng-if="fSessionCI.monedero"><div style="color: #c6efff; padding-top: 10px;">{{ 'Text.MONEDERO' | translate }}: {{saldo}} $</div></li>
     <li ng-if="fSessionCI.key_grupo == 'key_cliente'">
