--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -272,11 +272,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', end
 
 /*TEXTAREA*/
 .ta-editor.ta-html, .ta-scroll-window.form-control {
-    min-height: 210px;
+    min-height: 120px;
+    max-height: 300px!important;
 }
 .ta-scroll-window > .ta-bind {
-    min-height: 210px;
+    min-height: 120px;
 }
+.ta-editor{}
 /*BARRA HEADER*/
 minotaur-header{
   padding: 0 30px 0 0;
@@ -500,4 +502,16 @@ minotaur-header .navbar-header .navigation-toggle{
 }
 .btn-info.active{
   background-color: #20326b;
+}
+/* traductor */
+.skiptranslate .goog-te-banner-frame{display:none!important;}
+body{top:0px!important;}
+.traductor{
+  /*visibility: hidden;*/
+  position: absolute;
+  z-index: 8021;
+  right: 20%;top: 12px;}
+@media (max-width:767px){
+  .traductor{right: initial;margin-left: 10px}
+
 }
