--- a/admin/app/components/partials/navigation/navigation.html
+++ b/admin/app/components/partials/navigation/navigation.html
@@ -28,8 +28,8 @@
         <i class="icon-event icons"></i>
       </a>
     </li>
-    <li ng-class="{'active':$state.includes('pedidos')}" ng-show="valores[3]">
-      <a ng-click="$state.reload();" ui-sref="pedidos">
+    <li ng-class="{'active':$state.includes('pedido')}" ng-show="valores[3]">
+      <a ng-click="$state.reload();" ui-sref="pedido">
         <span class="nav-text">{{ 'Menu.PEDIDOS' | translate }}  </span>
         <i class="icon-event icons"></i>
       </a>
