--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -287,6 +287,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', end
 /*BARRA HEADER*/
 minotaur-header{
   padding: 0 30px 0 0;
+  background: linear-gradient(to left, #0784bd 50%, #b8e7fd 100%);
 }
 minotaur-header .navbar-header .navbar-brand{
     padding: 5px;
