--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7301,3 +7301,6 @@ body{top:0px!important;}
 #footer-top h1, #footer-top h2, #footer-top h3, #footer-top h4, #footer-top h5, #footer-top h6 {
     color: #ababab!important;
 }
+.modal-dialog{
+	margin: 130px auto!important;
+}
